Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16215

kfilnd panic in routed environment

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

      We need to use immediate sends for GETs when sending to a router, or when a router is forwarding a GET to its destination. We are not doing this in kfilnd and it causes the router to panic when forwarding the message because it tries to dereference the struct lnet_msg::msg_md which is NULL.

            hornc Chris Horn
            hornc Chris Horn
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: