LU-16215 kfilnd: Use immediate for routed GETs

struct lnet_msg::msg_md is NULL on routed GETs (or GETs being sent
to a router). As such we need to use immediate sends for these.

HPE-bug-id: LUS-11268
Test-Parameters: trivial
Signed-off-by: Chris Horn <chris.horn@hpe.com>
Change-Id: I69db5ec36a04b2a2a78d3e1a1b506eefbe8c6484
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/48787
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Ron Gredvig <ron.gredvig@hpe.com>
Reviewed-by: Ian Ziemba <ian.ziemba@hpe.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>